Cycles bake crashes Blender. #40048

Closed
opened 2014-05-06 14:44:11 +02:00 by Mariachi Maltesers · 16 comments

System Information
Windows 8.1 x64, Nvidia Geforce GTS450

Blender Version
Broken: (example: blender-2.70-7660218-win64

Short description of error
Cycles bake crashes Blender.

Exact steps for others to reproduce the error
Add a plane, select it, click Bake.
Cycles_crash.blend

**System Information** Windows 8.1 x64, Nvidia Geforce GTS450 **Blender Version** Broken: (example: blender-2.70-7660218-win64 **Short description of error** Cycles bake crashes Blender. **Exact steps for others to reproduce the error** Add a plane, select it, click Bake. [Cycles_crash.blend](https://archive.blender.org/developer/F87247/Cycles_crash.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Mariachi Maltesers 2014-05-06 14:44:11 +02:00

Added subscriber: @frmdbl

Added subscriber: @frmdbl

That seems to be a Windows specific problem. In OSX I get the error:
"Error: No active image found. Add a material or bake to an external file"

But absolutely no crashes. I'll try to get a backtrack from a windows developer to see what may be going on.

That seems to be a Windows specific problem. In OSX I get the error: "Error: No active image found. Add a material or bake to an external file" But absolutely no crashes. I'll try to get a backtrack from a windows developer to see what may be going on.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

@ThomasDinges are you still on Windows? can you confirm this bug, and if so, post a backtrace?
I think this is related to the wm_job threading.

@frmdbl can you try to bake via Python:
bpy.ops.object.bake(type=bpy.context.scene.cycles. bake_type, normal_space=bpy.context.scene.render.bake.normal_space)

And I found a way to get a crash when running via Python. Investigating now.

@ThomasDinges are you still on Windows? can you confirm this bug, and if so, post a backtrace? I think this is related to the wm_job threading. @frmdbl can you try to bake via Python: bpy.ops.object.bake(type=bpy.context.scene.cycles. bake_type, normal_space=bpy.context.scene.render.bake.normal_space) And I found a way to get a crash when running via Python. Investigating now.

This issue was referenced by blender/blender-addons-contrib@9fe618e309

This issue was referenced by blender/blender-addons-contrib@9fe618e309157ff0534846c5d7a00a62227d1205

This issue was referenced by 9fe618e309

This issue was referenced by 9fe618e309157ff0534846c5d7a00a62227d1205

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9fe618e309.

Closed by commit 9fe618e309.

@frmdbl I just committed a fix for a potential problem when there was no images in the file. If your problem persists please report back here and I re-open the issue. Thanks for the report.

@frmdbl I just committed a fix for a potential problem when there was no images in the file. If your problem persists please report back here and I re-open the issue. Thanks for the report.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@dfelinto

Sure, I'll test it when there's a build available.

bpy.ops.object.bake(type=bpy.context.scene.cycles. bake_type, normal_space=bpy.context.scene.render.bake.normal_space)

Running this crashes Blender too.

@dfelinto Sure, I'll test it when there's a build available. ``` bpy.ops.object.bake(type=bpy.context.scene.cycles. bake_type, normal_space=bpy.context.scene.render.bake.normal_space) ``` Running this crashes Blender too.

Yes, the bpy.ops. ... was to address the thread problem people may be running into. Hard to guess without a report that we can investigate deeply ;) so first thing to test once you get a new build is to use the bpy.ops. Then the button option, ok?

Yes, the bpy.ops. ... was to address the thread problem people may be running into. Hard to guess without a report that we can investigate deeply ;) so first thing to test once you get a new build is to use the bpy.ops. Then the button option, ok?

Absolutely.

Absolutely.

Doesn't crash anymore in Win7.x64-5cee409 using both python and ui.

Doesn't crash anymore in Win7.x64-5cee409 using both python and ui.

perfect, thanks for the report and the testing

perfect, thanks for the report and the testing
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40048
No description provided.