Fix T40048: Cycles bake crashes Blender [when there is no image]

The struct with the images was not NULL initialized.